# StarWay

./: .gitignore  .gitmodules  CMakeLists.txt  CompileLua_x32.bat  CompileLua_x64.bat  GenerateProjects.bat  InitBoost.bat  README.md  StarWay.sln  Starway.sharpmake  Starway.sharpmake.cs
Engine/Ash/: Ash.natvis  AshCore.cpp  AshCore.h  CMakeLists.txt  CommonFunc.cpp  CommonFunc.h  PreComp.h  Settings.h  TinyAssert.h  Utlity.cpp  Utlity.h  precomp.cpp  precomp.h
Engine/Ash/CommandLineCfg/: CommandLineCfg.cpp  CommandLineCfg.h
Engine/Ash/CommonStateMachine/: StateMachine.h  StateMachine.inl
Engine/Ash/Container/: ArrayStream.h  RingBuffer.h  RingBuffer.inl
Engine/Ash/FileSystem/: File.cpp  File_Win.cpp  File_Win.h  Path.cpp  Path.h  Path_Win.cpp  Path_Win.h  fs_include.h
Engine/Ash/FileSystem/ms/: File_Win.cpp  File_Win.h  Path_Win.cpp  Path_Win.h
Engine/Ash/Misc/: SingleInstance.h
Engine/Ash/MultiThread/: FunctorSeq.cpp  FunctorSeq.h  Semaphore.h  SpinMutex.h  Task.cpp  Task.h  TaskGraph.cpp  TaskGraph.h  TaskRingBuffer.h  TaskRingBuffer.inl  ThreadPool.cpp  ThreadPool.h
Engine/Ash/RefCountPointer/: RefCountObj.cpp  RefCountObj.h  RefCountPtr.cpp  RefCountPtr.h  RefCountPtr.inl
Engine/Ash/ThreadPool/: Task.cpp  Task.h  ThreadPool.h
Engine/Ash/TinyString/: TinyString.cpp  TinyString.h  TinyString.inl
Engine/Ash/project/: Ash.sharpmake  Ash.sharpmake.cs  Ash.vcxproj  Ash.vcxproj.filters
Engine/CompileShader/Shader/: common.h
Engine/CompileShader/project/: CompileShader.sharpmake  CompileShader.sharpmake.cs
Engine/CompileShader/shader/: defaultshader_ps.hlsl  defaultshader_vs.hlsl
Engine/DangoEngine/: CMakeLists.txt  DangoEngine.h  PreComp.h
Engine/DangoEngine/Components/: BaseComponent.cpp  BaseComponent.h  CameraComponent.cpp  CameraComponent.h  DirectionLightComponent.cpp  DirectionLightComponent.h  MaterialComponent.cpp  MaterialComponent.h  MeshComponent.cpp  MeshComponent.h  PointLightComponet.cpp  PointLightComponet.h  ScriptComponent.cpp  ScriptComponent.h  TransformComponent.cpp  TransformComponent.h
Engine/DangoEngine/Engine/: Engine.cpp  Engine.h  Game.cpp  Game.h
Engine/DangoEngine/Graphic/: GeometryGenerator.cpp  GeometryGenerator.h  GraphicCommand.cpp  GraphicCommand.h  Material.cpp  Material.h  WavefrontObjReader.cpp  WavefrontObjReader.h  WavefrontParser.cpp  WavefrontParser.h
Engine/DangoEngine/Input/: InputManager.cpp  InputManager.h  VirtualButton.h
Engine/DangoEngine/Input/Windows/: InputManagerWin.cpp
Engine/DangoEngine/Objects/: Object.cpp  Object.h
Engine/DangoEngine/Other/: Timer.cpp  TimerManager.cpp  TimerManager.h
Engine/DangoEngine/Scene/: Scene.cpp  Scene.h
Engine/DangoEngine/project/: TinyEngine.sharpmake.cs
Engine/DangoMath/: CMakeLists.txt  MathDef.cpp  MathDef.h
Engine/DangoMath/matrix/: Matrix.h  Matrix.inl
Engine/DangoMath/project/: Math.sharpmake.cs
Engine/DangoMath/quaternion/: Quaternion.h  Quaternion.inl
Engine/DangoMath/shape/: Rect.h  Rect.inl
Engine/DangoMath/vector/: Vector.h  Vector.inl
Engine/DurangoLancher/: DurangoLancher.vcxproj  Game.cpp  Game.h  Main.cpp  Package.appxmanifest  pch.h
Engine/Graphic/: GfxDefines.h  precomp.cpp  precomp.h
Engine/Graphic/DX11/: DDSTextureLoader.cpp  DX11ConstantBufferManager.cpp  DX11ConstantBufferManager.h  DX11GraphicMgr.cpp  DX11GraphicMgr.h  DX11InputLayout.cpp  DX11InputLayout.h  DX11RenderBuffer.cpp  DX11RenderBuffer.h  DX11Texture.cpp  DX11Texture.h  DX11Wrapper.cpp  DX11Wrapper.h  DXStaticFunctions.cpp  DXStaticFunctions.h
Engine/Graphic/EmbeddedShader/: pass_through_ps.hlsl  pass_through_vs.hlsl
Engine/Graphic/Manager/: ConstantBufferManager.cpp  ConstantBufferManager.h  DefaultMgr.cpp  DefaultMgr.h  GraphicMgr.cpp  GraphicMgr.h  (+5 more)
Engine/MaterialCompiler/: main.cpp  precomp.cpp  precomp.h
Engine/Math/: MathDef.h  MathStorage.h  precomp.cpp  precomp.h
Engine/PreBuild/: precomp.cpp  precomp.h
Engine/Sharpmake/: common.sharpmake.cs  tinytarget.sharpmake.cs
Engine/TinyEngine/: TinyEngine.h  precomp.cpp  precomp.h
Engine/UnitTest/: AshUnitTest.cpp  CMakeLists.txt  EngineUnitTest.cpp  MathUnitTest.cpp  precomp.h
Engine/UnitTest/Ash/: CommandLine.cpp  Container.cpp  MultiThread.cpp  RefCountObj.cpp  Utility.cpp
Engine/UnitTest/main/: gtest_main.cc
Engine/UnitTest/project/: UnitTest.sharpmake.cs
Engine/WinLancher/: UnitTest.cpp  main.cpp  precomp.cpp  precomp.h
Engine/WinLauncher/: CMakeLists.txt  PreComp.h  main.cpp
Engine/WinLauncher/project/: WinLancher.sharpmake.cs
Engine/WinLauncher/tools/renderdoc/: RenderDoc.cpp
StarWay/: CMakeLists.txt  precomp.cpp  precomp.h
StarWay/Art/DangoApple/: DangoApple.blend  DangoApple.blend1
StarWay/Art/DangoCube/: DangoCube.blend  DangoCube.blend1
StarWay/Art/DangoCube/Model/: DangoCube.mtl
StarWay/Art/DangoCup/: DangoCup.blend  DangoCup.blend1
StarWay/Art/DangoCup/Model/: DangoCup.mtl
StarWay/Art/DangoCup/Render/: 0001-0150.avi
StarWay/Art/DangoSimpleCube/: DangoSimpleCube.blend  DangoSimpleCube.blend1
StarWay/CommonBuilder/: lua.json  lua_32.json  lua_64.json  shader.json  shader_ps.json  shader_vs.json
StarWay/Game/: StarWayGame.cpp  StarWayGame.h
StarWay/Object/: Sun.cpp  Sun.h
StarWay/Scene/: MainScene.cpp  MainScene.h
StarWay/Script/: common.lua  init.lua  main_sceen.lua
StarWay/Script/prototype/: Camera.lua  Mesh.lua  Object.lua  Scene.lua  ScriptComponent.lua  Texture.lua  Transform.lua
StarWay/Script/script/: CameraControl.lua  ObjUpdata.lua  PointLightMovement.lua  SpineCamera.lua
StarWay/Script/spline/: bezier.lua  nurbs.lua  spline.lua
StarWay/Scripts/: CameraControl.h  PointLightMovement.h
StarWay/StartWayCmdLineCfg/: StartWayCmdLineCfg.cpp  StartWayCmdLineCfg.h
StarWay/graph/: StarVertex.cpp  StarVertex.h
StarWay/project/: StarWay.sharpmake  StarWay.sharpmake.cs  StarWay.vcxproj  StarWay.vcxproj.filters
StarWay/shader/: ShaderFirst_PS.hlsl  ShaderFirst_VS.hlsl  common.h  default_shader_PS.hlsl  default_shader_VS.hlsl
resources/: DangoApple.mtl  DangoCube.mtl  DangoSimpleCube.mtl
resources/shaders/: default_material.hlsl
(+165 files in other folders)
